# stellars-jupyterhub-ds-deployment-template

./: .gitignore  README.md  copier.yml  pyproject.toml
.claude/: CLAUDE.md  JOURNAL.md
.claude/commands/: release.md
.github/workflows/: validate-template.yml
extra/certs-installer/: README.md
template/: .env.default.jinja  .env.jinja  .gitignore  README.md.jinja  cleanup.sh  compose_override.yml.jinja  env.default.jinja  start.sh.jinja  stop.sh.jinja  {% if cifs_shared_mount %}compose_cifs.yml{% endif %}.jinja  {{ _copier_conf.answers_file }}.jinja
template/certs/: README.md  README.md.jinja  certs.params.jinja  certs_generate.sh  install_cert.sh
template/{% if local_tls_scaffolding %}certs{% endif %}/: install_cert.bat
tests/: test_operator_branding.sh  test_render.sh
