[project]
name = "stellars-jupyterhub-ds-deployment-template"
version = "0.1.0"
description = "Copier template that scaffolds a thin deployment overlay for stellars-jupyterhub-ds."
authors = [
    { name = "Stellars Henson", email = "konrad.jelen@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/stellarshenson/stellars-jupyterhub-ds-deployment-template"
